# qapt

./: .gitignore  CMakeLists.txt  README.md  qapt.pro
debian/: changelog  control  gstreamer-qapt.install  plasma-runner-installer.install  qapt-deb-installer.install  qapt-deb-installer.postinst
po/ast/: qapt-gst-helper.po
po/ca/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/ca@valencia/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/en_GB/: plasma_runner_installer.po
po/ko/: qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/nb/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/nn/: plasma_runner_installer.po
po/ro/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/sr/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/sr@ijekavian/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/sr@ijekavianlatin/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
po/sr@latin/: plasma_runner_installer.po  qapt-deb-installer.po  qapt-gst-helper.po  qaptbatch.po
src/: backend.cpp  debfile.cpp  transaction.cpp
utils/qapt-deb-installer/: CMakeLists.txt  main.cpp  qml.qrc
utils/qapt-deb-installer/jingos/: DebInstallTab.qml  DebViewer.qml  InstallText.qml  InstallTreeModel.cpp  InstallTreeModel.h  InstallTreeView.qml  JdebInstaller.cpp  JdebInstaller.h  JreadFile.cpp  JreadFile.h  main.qml
(+12 files in other folders)
